--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^7.2.0",
+    "@types/pg": "^8.16.0",
     "express": "^5.2.1",
+    "pg": "^8.16.3",
     "prisma": "^7.2.0"
   },
   "devDependencies": {
